# haskell-fitsio

./: AUTHORS  fitsio.cabal
src/: C2HS.hs
src/Data/Fits/: FQL.lhs  FitsIO.lhs  GBT.lhs
src/Data/Fits/GBT/: Antenna.lhs  ScanLog.lhs
