name:          fitsio
version:       0.3
stability:     alpha
synopsis:      A library for reading and writing data files in the FITS data format.
description:
  FITS (Flexible Image Transport System) is self-describing data format used
  heavily in astronomy and high-energy physics.  Right now this library is just
  an FFI wrapper, but higher-level functionality is planned.
license:       GPL
license-file:  COPYING
author:        Eric Sessoms <nubgames@gmail.com>
maintainer:    nubgames@gmail.com
homepage:      http://github.com/esessoms/fitsio
category:      data, physics
cabal-version: >= 1.2.0
build-type:    Simple

library
  exposed-modules: Data.Fits.FQL,
                   Data.Fits.FitsIO,
                   Data.Fits.GBT,
                   Data.Fits.GBT.Antenna,
                   Data.Fits.GBT.ScanLog,
                   Data.Fits.WCS
  other-modules:   C2HS
  ghc-options:     -threaded -rtsopts
  build-Depends:   base >= 4.2.0.0, filepath >= 1.1.0.1, mtl, dph-prim-par
  build-tools:     c2hs
  extra-libraries: cfitsio, m
  extensions:      ForeignFunctionInterface
  hs-source-dirs:  src/
